<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="cancel">CANCELAR</string>
    <string name="time_set">OK</string>
    
    <string name="app_name">Peugeot Car Safe</string>
    <string name="action_settings">Buscando actualizaciones</string>
    <string name="action_loading">Cargando Información</string>
    <string name="action_system_loading">Cargando información del sistema</string>
    <string name="dologin">dologin</string>
    <string name="user_name">{ Usuario }</string>
    
    <string name="empty_text_view">  </string>
    
    <!-- Descriptions -->
    <string name="desc_cam_image">Imagen de la Cámara</string>
    <string name="desc_avatar_image">Avatar</string>
    
    <!-- List Items strings -->
    <string name="lst_title_my_services">Registrar Mis Services</string>
    <string name="lst_title_my_vehicles">Consultar Mis Services</string>
    <string name="lst_title_my_vehicles_new">Consultar Mis Services</string>
    <string name="lst_title_official_services">Concesionarios Autorizados</string>
    <string name="lst_title_dealers">Concesionarios Autorizados</string>
    <string name="lst_title_advices">Avisos de services requerido</string>
    <string name="lst_title_alerts">Alertas</string>
    
    <string name="lst_no_vehicles">No tienes ningún vehículo asociado</string>
    
    
    <!-- Titles -->
    <string name="title_activity_check_for_update">Peugeot Car Safe</string>
    <string name="title_activity_first_access">PRIMER ACCESO</string>
    <string name="title_activity_login">INGRESO DE USUARIOS</string>
    <string name="title_request_reset">RECUPERAR CLAVE</string>
    <string name="title_activity_register">Registrate</string>
    <string name="title_activity_update">Mis datos</string>
    <string name="title_activity_change_password">Mi clave</string>
    <string name="title_activity_change_password_forced">Bienvenido a Peugeot Car Safe, para mas seguridad cambiá tu clave</string>
    <string name="title_activity_login_for_action_bar">Peugeot Car Safe</string>
    
    <string name="title_activity_search_dealers">Buscar concesionarios</string>
    <string name="title_activity_search_dealers_large">Selecciona la concesionaria autorizada donde deseas realizar el próximo service</string>
    <string name="title_activity_search_dealers_bajada">Elegí la provicia, luego la ciudad, presioná el botón buscar. una vez cargados los resultados seleccioná haciendo clic en la lista el Concesionario Autorizado en el que deseas realizar el service de tu vehículo.</string>
    <string name="title_activity_add_service">Registrar service</string>
    <string name="title_activity_add_service_info">Registrar un service</string>
    
    <string name="title_parkings">POI</string>
    <string name="title_prevent">Car Security</string>
    
    <string name="title_home">HOME</string>
  
    <string name="title_contact1">Primer contacto</string>
    <string name="title_service_owner">Titular del servicio</string>
    <string name="title_contact2">Segundo contacto</string>
    <string name="title_contact3">Tercer contacto</string>
    
    
    <!-- comments -->
    <string name="cmnt_home_page">Mantén presionada la opción y arrastrala al centro de la rueda para ingresar</string>
    <string name="cmnt_camera_tooltip">Presioná las flechas para orientar la cámara</string>
    <string name="cmnt_text_first_access">Si has descargado recientemente la aplicación y no tenes cuenta, presioná «NO TENGO». Y si ya has creado tu cuenta ingrese ahora haciendo tap en el botón «TENGO CUENTA».</string>

    <!-- Ruedita -->
    <string name="rd_main_promo_title">Peugeot Car Safe</string>
    <string name="rd_main_hookline"> </string>
    <string name="rd_default_comment"> </string>
    
    <!-- labels -->
    <string name="lbl_docType">Tipo doc.</string>
    <string name="lbl_idNumber">Documento</string>
    <string name="lbl_idNumberSample">Ej:12123123</string>
    <string name="lbl_password">Clave</string>
    
    <string name="lbl_actualPass">Clave actual</string>
    <string name="lbl_newPass">Nueva clave</string>
    <string name="lbl_newPassRep">Repetir nueva</string>

    <string name="lbl_birth_date">Fecha de nac.</string>
    
    <string name="notReceiveAlerts">Deseo recibir alertas de service</string>
    <string name="notDealerAlerts">Deseo ser contactado por el concesionario autorizado para programar el service</string>
    
    <string name="lbl_services_select_services">Seleccione service</string>
    <string name="lbl_services_service_date">Fecha del service</string>
    <string name="lbl_services_service_km_done">Kilometros recorridos totales al service</string>
    
    <string name="lbl_update_contact_phone">Teléfono</string>
    <string name="lbl_update_contact_phone_sms">Teléfono SMS</string>
    <string name="lbl_update_contact_security_word">Palabra de seguridad</string>
    <string name="lbl_update_contact_health_insurance">Cobertura médica</string>
    <string name="lbl_update_contact_nombre">Nombre</string>
    <string name="lbl_update_contact_relationship">Relación</string>
    
    <!-- Buttons -->
    <string name="btn_tag_login">Ingresar</string>
    <string name="btn_tag_register">Registrarme</string>
    <string name="btn_tag_modify">Guardar</string>
    <string name="btn_tag_modify_my_data"> </string>
    <string name="btn_tag_change_password">Mi clave</string>
    <string name="btn_tag_forgotpass">Recuperar clave</string>
    <string name="btn_tag_reset_password">Enviar</string>
    <string name="btn_tag_reset_password_back">Volver</string>
    <string name="btn_tag_guardPhoneCall">INICIAR LLAMADA\nDE ASISTENCIA</string>
    <string name="btn_tag_SendAlert">REPORTAR\nUNA EMERGENCIA</string>
    
    <string name="btn_samePhoneForAllCheckbox">Usar el mismo numero para enviarme las alertas de salida de zona y exceso de velocidad</string>
    <string name="btn_samePhoneForEachVehicleCheckbox">Usar el mismo numero para todos mis vehículos</string>
    
    
    <string name="btn_tag_go">Ir</string>
    
    <string name="btn_tag_add">Agregar</string>
    
    <string name="action_home">Home</string>
    
    <string name="btn_home">[Home Deprecated]</string>
    <string name="btn_prevent"> </string>
    <string name="btn_pets">[PETS deprecated]</string>
    <string name="btn_parkings"> </string>
    <string name="btn_services"> </string>
    <string name="btn_tv">[TV Deprecated]</string>
    
    <string name="btn_footer_home">[Home Deprecated]</string>
    <string name="btn_footer_prevent">[Car Security]</string>
    <string name="btn_footer_pets">[PETS deprecated]</string>
    <string name="btn_footer_config">[POI]</string>
    <string name="btn_footer_data">Data</string>
    
    <string name="btn_male">Masculino</string>
    <string name="btn_female">Femenino</string>
    <string name="btn_optIn">Acepto recibir contactos de Peugeot Car Safe y sus compañías asociadas</string>
    
    <string name="btn_dismiss_advices">No recordar</string>
    <string name="btn_snooze_advices">Más tarde</string>
    
    <string name="random_on">RAN ON</string>
    <string name="random_off">RAN OFF</string>
    
    <string name="tog_btn_default">ON/OFF</string>
    
    <string name="btn_config_emergencias">Configuración emergencias</string>
    <string name="btn_my_services">Registrar Mis Services</string>
    <string name="btn_my_vehicles">Mis Vehiculos</string>
    <string name="btn_official_services">Consultar Mis Services</string>
    <string name="btn_services_locations">Concesionarios Autorizados</string>
    
    <string name="btn_search_dealers">Buscar</string>
    
    <string name="btn_select_for_my_services">Seleccionar para mis services</string>
    <string name="btn_send_emergency">Enviar emergencia</string>
    <string name="btn_close_historic">Cerrar</string>
    
    <string name="btn_already_client">TENGO CUENTA</string>
    <string name="btn_not_client">NO TENGO</string>
    
    
    <string name="lst_itm_km">Km</string>
    <string name="lst_itm_needs_service">Requiere service</string>
    <string name="lst_itm_last_service">Ultimo service</string>
    <string name="btn_tag_add_service">Registrar</string>
    
    <string name="lst_itm_in_warranty">En garantía</string>
    <string name="lst_itm_model_warranty">Garantía</string>
    
    <string name="lst_itm_address">Dirección</string>
    <string name="lst_itm_email">Email</string>
    <string name="lst_itm_phone">Telefono</string>
    
    <string name="lst_itm_service_before_km">Antes del kilometraje</string>
    <string name="lst_itm_service_before_date">Antes de la fecha</string>

    <!-- Hints -->
    <string name="hnt_doc_number">Número de documento</string>
    <string name="hnt_doc_password">Clave</string>
    <string name="hnt_doc_password1">Repetir clave</string>
    <string name="hnt_firstname">Nombre</string>
    <string name="hnt_apellido">Apellido</string>
    <string name="hnt_email">E-mail</string>
    <string name="hnt_area_code">Código de Area</string>
    <string name="hnt_mobile">Celular</string>
    <string name="hnt_calle1">Calle 1</string>
    <string name="hnt_calle2">Calle 2</string>
    <string name="hnt_postal_code">Código postal</string>
    <string name="hnt_city">Ciudad</string>
    <string name="hnt_birthdate">Fecha de nacimiento</string>
    
    <string name="hnt_password">Clave</string>
    <string name="hnt_actual_password">Clave actual</string>
    <string name="hnt_new_password">Nueva Clave</string>
    <string name="hnt_retype_new_password">Repetir nueva Clave</string>
   
    <string name="hnt_service_km">Kilometraje recorrido</string>
    
    <string name="hnt_contact1name">Nombre</string>
    <string name="hnt_contact1phone">Telefono</string>
    <string name="hnt_security_word">Palabra de seguridad</string>
    <string name="hnt_health_insurance">Cobertura médica</string>
    
    <string name="hnt_contact2name">Nombre</string>
    <string name="hnt_contact2phone">Telefono</string>
    
    <string name="hnt_contact3name">Nombre</string>
    <string name="hnt_contact3phone">Telefono</string>
    
    <!-- Checkboxes and Radiobutton titles -->
    <string name="crt_tag_rememberme">Recordar mis datos</string>
    
    <string name="lst_title_history_list">Historial de recorridos</string>
    <string name="lst_title_history_point">Detalle</string>
    
    <string name="lbl_plate">Dominio:</string>
    <string name="lbl_speed">Vel:</string>
    <string name="lbl_speed_unit">Km/h</string>
    <string name="btn_tag_gotomap">Ver en mapa</string>
    
    
    <string name="title_select_vehicle">Seleccionar vehículo</string>
    
    <string name="selectVehicleForSpeed">Velocidad Máxima</string>
    <string name="selectVehicleForZone">Determinar zona</string>
    <string name="selectVehicleForPhoneNumbers">Teléfonos de seguridad</string>
    <string name="selectVehicleForPath">Recorridos históricos</string>
    
    
    <string name="title_max_speed">Velocidad Máxima</string>
    <string name="title_select_zone">Determinar zona</string>
    <string name="title_sms_phones">Teléfonos de seguridad</string>
    <string name="title_choose_date">Determinar fecha</string>
    
    <string name="btn_lbl_back">Volver</string>
    <string name="btn_lbl_save">Grabar</string>
    <string name="btn_lbl_next">Siguiente</string>
</resources>