<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ChangePasswordActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/loginObjects"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg_ondas"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/main_logo"
            style="@style/mainLogoAtLogin"
            android:contentDescription="@string/app_name"
            android:src="@drawable/main_logo" />

        <LinearLayout
            style="@style/LoginScreen" >
            
            <TextView
                android:id="@+id/loadingInfoText"
                android:text="@string/title_activity_change_password"
                style="@style/MainTitles" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/grayTabBase"
                android:padding="15dp" >

                <TableRow
                    android:id="@+id/tableActualPass"
                    style="@style/fieldsetLike">
                    
                    <TextView
                        android:id="@+id/labelActualPass"
                        style="@style/Label"
                        android:text="@string/lbl_actualPass" />

					<EditText
					    android:id="@+id/oldPassword"
					    android:hint="@string/hnt_actual_password"
					    android:inputType="textPassword"
					    style="@style/textFieldsOne" >
					    <requestFocus />
					</EditText>
					
				</TableRow>

                <TableRow
                    android:id="@+id/tableNewPass"
                    style="@style/fieldsetLike">

                    <TextView
                        android:id="@+id/labelNewPass"
                        style="@style/Label"
                        android:text="@string/lbl_newPass" />

		            <EditText
		                android:id="@+id/new_password"
		                android:hint="@string/hnt_new_password"
		                android:inputType="textPassword"
		                style="@style/textFieldsOne" />
		            
				</TableRow>

                <TableRow
                    android:id="@+id/tableNewPassRepeat"
                    style="@style/fieldsetLike">

                    <TextView
                        android:id="@+id/labelIdNumber"
                        style="@style/Label"
                        android:text="@string/lbl_newPassRep" />
                    
		            <EditText
		                android:id="@+id/retype_new_password"
		                android:hint="@string/hnt_retype_new_password"
		                android:inputType="textPassword"
		                style="@style/textFieldsOne" />

				</TableRow>
				
			</TableLayout>
			
            <TableRow
                android:id="@+id/buttonWrapper"
                style="@style/buttonWrapper" >

				<Button
				    android:id="@+id/updateButton"
				    style="@style/ButtonListItems"
				    android:onClick="@string/dologin"
				    android:text="@string/btn_tag_modify" />

            </TableRow>

		</LinearLayout>
		
	    <ImageView
	        android:id="@+id/placahome"
	        android:layout_width="wrap_content"
	        android:layout_height="80dp"
	        android:layout_gravity="bottom|center_horizontal"
	        android:layout_margin="15dp"
	        android:layout_weight="1"
	        android:adjustViewBounds="true"
	        android:contentDescription="@string/action_loading"
	        android:gravity="bottom|center_horizontal"
	        android:maxWidth="240dp"
	        android:src="@drawable/app_logo" />
	    
    </LinearLayout>
 
</merge>