<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/loginObjects"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg_ondas"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/main_logo"
            style="@style/mainLogoAtLogin"
            android:layout_height="40dp"
            android:layout_margin="25dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/main_logo" />
        
        <LinearLayout
            style="@style/LoginScreen" >

            <TextView
                android:id="@+id/loadingInfoText"
                style="@style/MainTitles"
                android:text="@string/title_request_reset" />
            
            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/grayTabBase"
                android:padding="15dp" >

	            <TableRow
                    android:id="@+id/tableIDNumber"
                    style="@style/fieldsetLike">
                    
                    <TextView
                        android:id="@+id/labelIdNumber"
                        style="@style/Label"
                        android:text="@string/lbl_idNumber" />
                    
		            <EditText
		                android:id="@+id/documentNumber"
		                android:hint="@string/lbl_idNumberSample"
		                android:inputType="number"
		                style="@style/textFieldsOne" >
		                <requestFocus />
		            </EditText>

		        </TableRow>

            </TableLayout>

            <TableRow
                android:id="@+id/buttonWrapper"
                style="@style/buttonWrapper" >

	            <Button
	                android:id="@+id/resetPasswordBack"
	                style="@style/ButtonBackward"
	                android:layout_weight="1"
	                android:onClick="@string/dologin"
	                android:text="@string/btn_tag_reset_password_back" />
	            
	            <Button
	                android:id="@+id/resetPasswordButton"
	                style="@style/ButtonForward"
	                android:layout_weight="1"
	                android:onClick="@string/dologin"
	                android:text="@string/btn_tag_reset_password" />

            </TableRow>

        </LinearLayout>

	    <ImageView
	        android:id="@+id/placahome"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_gravity="bottom|center_horizontal"
	        android:layout_margin="25dp"
	        android:layout_weight="1"
	        android:adjustViewBounds="true"
	        android:contentDescription="@string/action_loading"
	        android:gravity="bottom|center_horizontal"
	        android:maxWidth="240dp"
	        android:src="@drawable/app_logo" />

	</LinearLayout>

</merge>