<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/loginObjects"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top|center_horizontal"
        android:baselineAligned="false"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:background="@drawable/bg_white_degrade" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp" >

                <TextView
                    android:id="@+id/loadingInfoText"
                    android:text="@string/title_contact1"
                    style="@style/MainTitles" />

                <EditText
                    android:id="@+id/contact1NameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hnt_contact1name" />

                <Spinner
                    android:id="@+id/contact1RelationSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp" />

                <EditText
                    android:id="@+id/contact1PhoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hnt_contact1phone"
                    android:inputType="number" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/securityWordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hnt_security_word" />

                <EditText
                    android:id="@+id/healthInsuranceEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:ems="10"
                    android:hint="@string/hnt_health_insurance"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/TextView01"
                    android:text="@string/title_contact2"
					style="@style/MainTitles" />

                <EditText
                    android:id="@+id/contact2NameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hnt_contact2name" />

                <Spinner
                    android:id="@+id/contact2RelationSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp" />

                <EditText
                    android:id="@+id/contact2PhoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hnt_contact1phone"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/TextView02"
                    android:text="@string/title_contact3"
					style="@style/MainTitles" />

                <EditText
                    android:id="@+id/contact3NameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hnt_contact3name" />

                <Spinner
                    android:id="@+id/contact3RelationSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp" />

                <EditText
                    android:id="@+id/contact3PhoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hnt_contact3phone"
                    android:inputType="number" />

                <Button
                    android:id="@+id/updateEmergenccyConfigButton"
                    android:onClick="@string/dologin"
                    android:text="@string/btn_tag_modify"
                    style="@style/ButtonListItems" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</merge>