<merge xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".LoginActivity" xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/loginObjects"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg_ondas"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0.2"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/main_logo"
                style="@style/mainLogoAtLogin"
                android:contentDescription="@string/app_name"
                android:src="@drawable/main_logo" />

        </LinearLayout>

        <LinearLayout
            style="@style/LoginScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="0.4"
            android:gravity="top|center_horizontal" >

            <TextView
                android:id="@+id/loadingInfoText"
                style="@style/MainTitles"
                android:text="@string/title_activity_login" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/grayTabBase"
                android:padding="15dp" >

                <!--TableRow
                    android:id="@+id/tableIDType"
                    style="@style/fieldsetLike"
                    android:layout_height="0dp"
                    android:visibility="invisible" >

                    <TextView
                        android:id="@+id/labelIDType"
                        style="@style/Label"
                        android:text="@string/lbl_docType" />

                    <Spinner
                        android:id="@+id/documentType"
                        style="@style/textFieldsOne" />

                </TableRow-->

                <TableRow
                    android:id="@+id/tableIDNumber"
                    style="@style/fieldsetLike">

                    <TextView
                        android:id="@+id/labelIdNumber"
                        style="@style/Label"
                        android:text="@string/lbl_idNumber" />

                    <EditText
                        android:id="@+id/documentNumber"
                        android:hint="@string/lbl_idNumberSample"
                        android:inputType="number"
                        style="@style/textFieldsOne" />

                </TableRow>

                <TableRow
                    android:id="@+id/tablePassword"
                    style="@style/fieldsetLike"
                    android:layout_marginBottom="5dp" >

                    <TextView
                        android:id="@+id/labelPassword"
                        style="@style/Label"
                        android:text="@string/lbl_password" />

                    <EditText
                        android:id="@+id/password"
                        android:hint="@string/hnt_doc_password"
                        android:inputType="textPassword"
                        style="@style/textFieldsOne" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRememberMe"
                    style="@style/fieldsetLike"
                    android:layout_marginBottom="0dp" >

                    <CheckBox
                        android:id="@+id/rememberPasswordCheckbox"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:gravity="center_vertical|fill_horizontal"
                        android:text="@string/crt_tag_rememberme"
                        android:textAlignment="center"
                        android:visibility="visible" 
                        style="@style/Label" />

                </TableRow>

                <TextView
                    android:id="@+id/appVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="TextView"
                    android:textColor="@color/gray"
                    android:textSize="8sp" />

            </TableLayout>

            <TableRow
                android:id="@+id/buttonWrapper"
                style="@style/buttonWrapper" >

                <Button
                    android:id="@+id/requestResetPassword"
                    style="@style/ButtonBackward"
                    android:layout_weight="1"
                    android:minWidth="120dp"
                    android:text="@string/btn_tag_forgotpass" />

                <Button
                    android:id="@+id/loginButtons"
                    style="@style/ButtonForward"
                    android:layout_weight="1"
                    android:minWidth="80dp"
                    android:onClick="@string/dologin"
                    android:text="@string/btn_tag_login" />

            </TableRow>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/placahome"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/action_loading"
                android:gravity="bottom|center_horizontal"
                android:maxWidth="240dp"
                android:src="@drawable/app_logo" />

        </LinearLayout>

    </LinearLayout>
</merge>