<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MyServicesActivity" >

    <!-- Login progress -->

    <!-- Login form -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lst_title_advices"
            android:textColor="@color/lst_itm_title"
            android:textSize="16sp" />

        <ListView
            android:id="@+id/dealers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.60" >

        </ListView>

        <Button
            android:id="@+id/dismissAdvicesButton"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/btn_rojo_normal_holo_light"
            android:minHeight="40dp"
            android:onClick="@string/dologin"
            android:text="@string/btn_dismiss_advices"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/snoozeAdvicesButton"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/btn_rojo_normal_holo_light"
            android:minHeight="40dp"
            android:onClick="@string/dologin"
            android:text="@string/btn_snooze_advices"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

</merge>